--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
-<!DOCTYPE html>
 <html>
-<head></head>
-<body>
-	<h1>Brianna Luna</h1>
-	</body>
+  <head> 
+    <meta charset="utf-8">
+    <title>HTML Examples</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <header>
+      <a href="index.html" id="logo">
+        <h1>Brianna Danielle Luna</h1>
+        <h2>Singer</h2>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Index</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="wrapper">
+      <section>
+        <div id="wrapper">
+      <section>
+        <h3>What made you decide to take this "Web Design" cass?</h3>
+        <p> Before being enrolled in this class, I was in a different elective. At first, I did not want to take this class because I remembered how difficult Multimedia 1 was for me. Now, I am glad I have taken this class because I feel that Mr. Scott Is a great teacher and although Multimedia II is still challenging, It's fun as well.
+        </p>
+           <li>
+            <a href="img/numbers-01.jpg">
+              <img src="img/numbers-01.jpg" alt=""> 
+            </a>
+          </li>
+      </section>
+      <section>
+        <h3>Will knowing how to code ever come in handy?</h3>
+        <p> I think knowing how to code will benefit me in the future because with whatever I want to do when I get older, I'll probably want a website and knowing how to create my own will definitely be useful. 
+        </p>
+           <li>
+            <a href="img/numbers-06.jpg">
+              <img src="img/numbers-06.jpg" alt=""> 
+            </a>
+          </li>
+        </section>
+        <section>
+        <h3>What do you want to do in the future?</h3>
+        <p> I love singing. I love how I feel when I sing and the beautiful noises that are created by opening your mouth. I do wamt to make a career out of it but I am still hesitant because I am not sure if I'll succeed, but it is my passion and by singing, I'm happy. Perhaps, I could become a voice instructor or hotel singer.
+        </p>
+            <a href="img/numbers-08.jpg">
+              <img src="img/numbers-08.jpg" alt="">
+            </a>
+          </li>
+      </section>
+      </footer>
+    </div>
+  </body>
 </html>
+			
+
